log
Thu 24 Aug 2023 08:00:55 PM UTC: 
 tests:  0|6
total_score: 0/70
11a2449
Thu 24 Aug 2023 08:02:46 PM UTC: 
 list.c | 111 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 103 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c:167:8: error: redefinition of ‘popCurrent’
  167 | void * popCurrent(List * list) {
      |        ^~~~~~~~~~
list.c:101:7: note: previous definition of ‘popCurrent’ with type ‘void *(List *)’
  101 | void *popCurrent(List *list) {
      |       ^~~~~~~~~~
test.c:448:5: error: redefinition of ‘main’
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:132:5: note: previous definition of ‘main’ with type ‘int()’
  132 | int main() {
      |     ^~~~
Compilation failed
5838a57
Thu 24 Aug 2023 08:09:10 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:167:8: error: redefinition of ‘popCurrent’
  167 | void * popCurrent(List * list) {
      |        ^~~~~~~~~~
list.c:101:7: note: previous definition of ‘popCurrent’ with type ‘void *(List *)’ {aka ‘void *(struct List *)’}
  101 | void *popCurrent(List *list) {
      |       ^~~~~~~~~~
test.c:448:5: error: redefinition of ‘main’
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:132:5: note: previous definition of ‘main’ with type ‘int()’
  132 | int main() {
      |     ^~~~
Compilation failed
ca4235d
Fri 25 Aug 2023 12:21:50 AM UTC: 
 list.c | 145 +++--------------------------------------------------------------
 1 file changed, 6 insertions(+), 139 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccb28jwk.o: in function `test_last_prev':
test.c:(.text+0x2ef): undefined reference to `lastList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x35f): undefined reference to `prevList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x417): undefined reference to `prevList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x47c): undefined reference to `prevList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccb28jwk.o: in function `test_pushfront':
test.c:(.text+0x548): undefined reference to `pushFront'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x5ea): undefined reference to `pushFront'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccb28jwk.o: in function `test_pushcurrent':
test.c:(.text+0x734): undefined reference to `pushCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x789): undefined reference to `pushCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccb28jwk.o: in function `test_popcurrent':
test.c:(.text+0x8d9): undefined reference to `popCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x957): undefined reference to `popCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x9bb): undefined reference to `popCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccb28jwk.o: in function `test_first_next':
test.c:(.text+0xb47): undefined reference to `firstList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xba6): undefined reference to `firstList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xbf9): undefined reference to `nextList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xc54): undefined reference to `nextList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xc85): undefined reference to `nextList'
collect2: error: ld returned 1 exit status
Compilation failed
afd02c6
Fri 25 Aug 2023 12:29:21 AM UTC: 
 list.c | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
 tests:  1|5
total_score: 10/70
2a39a2a
Fri 25 Aug 2023 12:37:22 AM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
663ee33
Fri 25 Aug 2023 12:53:38 AM UTC: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
63f1532
Fri 25 Aug 2023 01:01:17 AM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  10|2
total_score: 45/70
ff536c6
Fri 25 Aug 2023 01:19:00 AM UTC: 
 list.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
e728b62
Fri 25 Aug 2023 01:22:58 AM UTC: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  12|0
total_score: 70/70
0f36b11
Sat 26 Aug 2023 02:37:54 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:8: error: expected ‘(’ before ‘list’
   54 |     if list == NULL || list->current == NULL || list->current->next == NULL {
      |        ^~~~
      |        (
list.c:54:8: error: statement with no effect [-Werror=unused-value]
   54 |     if list == NULL || list->current == NULL || list->current->next == NULL {
      |        ^~~~
list.c: In function ‘lastList’:
list.c:61:8: error: expected ‘(’ before ‘list’
   61 |     if list == NULL {
      |        ^~~~
      |        (
list.c:61:8: error: statement with no effect [-Werror=unused-value]
   61 |     if list == NULL {
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
66a9c3f
Sat 26 Aug 2023 02:38:12 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:8: error: expected ‘(’ before ‘list’
   54 |     if list == NULL || list->current == NULL || list->current->next == NULL {
      |        ^~~~
      |        (
list.c:54:8: error: statement with no effect [-Werror=unused-value]
   54 |     if list == NULL || list->current == NULL || list->current->next == NULL {
      |        ^~~~
list.c: In function ‘lastList’:
list.c:61:8: error: expected ‘(’ before ‘list’
   61 |     if list == NULL {
      |        ^~~~
      |        (
list.c:61:8: error: statement with no effect [-Werror=unused-value]
   61 |     if list == NULL {
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
e4c8954
Sat 26 Aug 2023 02:38:33 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:8: error: expected ‘(’ before ‘list’
   54 |     if list == NULL || list->current == NULL || list->current->next == NULL {
      |        ^~~~
      |        (
list.c:54:8: error: statement with no effect [-Werror=unused-value]
   54 |     if list == NULL || list->current == NULL || list->current->next == NULL {
      |        ^~~~
list.c: In function ‘lastList’:
list.c:61:8: error: expected ‘(’ before ‘list’
   61 |     if list == NULL || list->tail == NULL {
      |        ^~~~
      |        (
list.c:61:8: error: statement with no effect [-Werror=unused-value]
   61 |     if list == NULL || list->tail == NULL {
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
53ca3a1
Sat 26 Aug 2023 02:38:52 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:8: error: expected ‘(’ before ‘list’
   54 |     if list == NULL || list->current == NULL || list->current->next == NULL {
      |        ^~~~
      |        (
list.c:54:8: error: statement with no effect [-Werror=unused-value]
   54 |     if list == NULL || list->current == NULL || list->current->next == NULL {
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
4ff482c
Sat 26 Aug 2023 02:39:35 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
8a92030
Sat 26 Aug 2023 02:43:23 AM UTC: 
 list.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  12|0
total_score: 70/70
cfd0b25
Sat 26 Aug 2023 02:45:17 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createNode’:
list.c:22:23: error: implicit declaration of function ‘callloc’; did you mean ‘calloc’? [-Werror=implicit-function-declaration]
   22 |   Node *new = (Node *)callloc(sizeof(Node));
      |                       ^~~~~~~
      |                       calloc
list.c:22:15: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   22 |   Node *new = (Node *)callloc(sizeof(Node));
      |               ^
cc1: all warnings being treated as errors
Compilation failed
7b41b02
Sat 26 Aug 2023 02:45:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createNode’:
list.c:22:23: error: implicit declaration of function ‘caloc’; did you mean ‘calloc’? [-Werror=implicit-function-declaration]
   22 |   Node *new = (Node *)caloc(sizeof(Node));
      |                       ^~~~~
      |                       calloc
list.c:22:15: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   22 |   Node *new = (Node *)caloc(sizeof(Node));
      |               ^
cc1: all warnings being treated as errors
Compilation failed
c313459
